--- a/README.org
+++ b/README.org
@@ -78,6 +78,7 @@ chmod +x install_tmcstu
 在使用 =install_repos_pkgs= 安装时, 脚本会自动检测是否需要下载或者提取安装包.
 另外, 也可以通过
 #+begin_src shell
+./install_repos_pkgs dl list  # 仅显示全部可下载内容
 ./install_repos_pkgs dl repos # 仅网络源码
 ./install_repos_pkgs dl pkgs  # 仅工作站源码
 ./install_repos_pkgs dl all   # 网络和工作站源码
@@ -191,3 +192,5 @@ SSH_CONNECTION="zhangmy@222.29.156.110"
 
   - 将 =install_repos_pkgs= 中的 =PREFIX= 变量移入 =custom.sh=.
   - =init= 子命令不再引入 VS Code repo. Visual Studio code 的安装通过 =install_tmcstu= 子命令 =vscode= 完成.
+
+- 2021-05-06 =dl= 子命令增加 list 选项以打印所有可下载的内容.
