--- a/README.org
+++ b/README.org
@@ -118,8 +118,8 @@ chmod +x install_tmcstu
 
 目前, 自动安装的程序都会置于 =~/local/programs= 下, 或通过 rpm 安装到根目录中.
 建议在手动安装的程序时也遵循这一设置.
-
-** 安装 CUDA toolkit
+** 安装其他工具
+*** CUDA toolkit
 如需安装 CUDA toolkit, 输入
 #+begin_src shell
 ./install_tmcstu cuda
@@ -130,13 +130,13 @@ chmod +x install_tmcstu
 #+end_src
 对 CUDA toolkit 安装进行验证.
 
-** 安装 Docker 引擎
+*** Docker 引擎
 同样可以通过 =install_tmcstu= 安装, 只需运行
 #+begin_src shell
 ./install_tmcstu docker
 #+end_src
 
-** 安装 VS Code
+*** VS Code
 只需运行
 #+begin_src shell
 ./install_tmcstu vscode
@@ -165,7 +165,15 @@ chmod +x install_tmcstu
 ./deviceQuery
 #+end_src
 或用上面脚本的 =vc= 子命令来验证. 如检测到 Quadro P620 则表明设置成功.
+** 编译 CUDA toolkit 出现 chrono segmentation fault
+可能与 GCC 版本有关. 目前已知 10.3.1 版本会在编译 =dmmcoretensorgmm= 时报该错误.
+将 GCC 版本降级到 10.2.1 或者 10.0.1 可以解决, 具体命令
+#+begin_src bash
+sudo dnf downgrade gcc
+#+end_src
 
+** nvidia-setting 显示有 GPU0, 但是 deviceQuery 返回错误代码 999
+重启电脑后再次尝试.
 ** 开机后按 F10 无法进入 BIOS
 这与 BIOS 设置有关. 按 F10 后若听到 "嘟" 的一声, 那么实际上已经进入 BIOS 了, 只是显示器没有能够显示 BIOS 界面.
 为此需要保证 VGA Boot Options 的值与所接显卡一致. 在 BIOS 中修改该选项值的办法可参考 "启用 CUDA 独显"一节.
@@ -183,14 +191,25 @@ chmod +x install_tmcstu
 SSH_CONNECTION="zhangmy@222.29.156.110"
 #+end_src
 
-* Changelog
-- 2021-04-12 草稿
-- 2021-04-26 实现部分安装器
-- 2021-04-29 实现更多的安装器, 包括 Intel, CP2k 及其依赖.
-- 2021-05-04 将 =install_tmcstu.sh= 中源码下载功能移入 =install_repos_pkgs.sh=.
-- 2021-05-05 移除可执行脚本名字中的 sh 后缀.
+** 无法用 SSH 连接到 TMCSTU
+首先确认 TMCSTU 的 IP 是否正确, 如果 TMCSTU 在路由器内网中 (一般来说 IP 以 =192.168= 开头), 还需确认路由器端口转发正常工作 (咨询管理员).
+然后确认 TMCSTU 的 22 端口是否打开. 确认方法: 输入
+#+begin_src shell
+sudo vim /etc/ssh/sshd_config
+#+end_src
+确保有 =Port 22= 一行并且没有被注释掉 (=#=). 确认后, 输入
+#+begin_src shell
+sudo service sshd restart
+#+end_src
+重启 SSH 服务. 应该可以正常 SSH 连接到 TMCSTU.
 
+* Changelog
+- 2021-05-26 补充 CUDA toolkit 安装和 SSH 连接的 QA.
+- 2021-05-06 =dl= 子命令增加 list 选项以打印所有可下载的内容.
+- 2021-05-05 移除可执行脚本名字中的 sh 后缀.
   - 将 =install_repos_pkgs= 中的 =PREFIX= 变量移入 =custom.sh=.
   - =init= 子命令不再引入 VS Code repo. Visual Studio code 的安装通过 =install_tmcstu= 子命令 =vscode= 完成.
-
-- 2021-05-06 =dl= 子命令增加 list 选项以打印所有可下载的内容.
+- 2021-05-04 将 =install_tmcstu.sh= 中源码下载功能移入 =install_repos_pkgs.sh=.
+- 2021-04-29 实现更多的安装器, 包括 Intel, CP2k 及其依赖.
+- 2021-04-26 实现部分安装器
+- 2021-04-12 草稿
