--- a/README.org
+++ b/README.org
@@ -30,7 +30,8 @@
 文件夹下的 =README= (org 或 md 文件)
 #+end_quote
 
-如果你是第一个使用这台机器的人, 请在联网后输入以下命令:
+在 =tmcstu= 家目录下查看手否有 =install_tmcstu= 这一文件夹.
+如果没有, 那你就很可能是第一个使用这台机器的人, 请在联网后输入以下命令:
 
 #+begin_src shell
 rsync --exclude="repos" --exclude="pkgs" -ar yourusername@222.29.156.110:/home/zhangmy/install_tmcstu ~/
@@ -55,8 +56,11 @@ Fedora 环境初始化和基础软件安装通过 =install_tmcstu= 脚本完成,
 #+begin_src shell
 rsync --exclude="repos" --exclude="pkgs" -ar yourusername@222.29.156.110:/home/zhangmy/install_tmcstu .
 #+end_src
-
-在终端依次输入
+也可以从 GitHub 上 clone
+#+begin_src shell
+git clone https://github.com/minyez/install_tmcstu.git
+#+end_src
+随后在终端依次输入
 #+begin_src shell
 cd install_tmcstu
 chmod +x install_tmcstu
